--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<assertj.version>3.22.0</assertj.version>
 		<mockito.version>4.2.0</mockito.version>
 		<karate.version>1.1.0</karate.version>
+		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -75,6 +76,16 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-plugin.version}</version>
+				<configuration>
+					<includes>
+						<include>com/task/rpsbe/*.java</include>
+					</includes>
 				</configuration>
 			</plugin>
 		</plugins>
